<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <include
        android:id="@+id/email_login_title_bar"
        layout="@layout/title_bar" />

    <TextView
        android:id="@+id/tv_sign_up_email_instructions"
        style="@style/text_16_DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_title_bar" />

    <EditText
        android:id="@+id/et_log_in_email"
        style="@style/text_14_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_corner_edit_gray_bg_gray"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_email_instructions" />

    <TextView
        android:id="@+id/tv_sign_up_password_instructions"
        style="@style/text_16_DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_log_in_email" />

    <EditText
        android:id="@+id/et_log_in_password"
        style="@style/text_14_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_corner_edit_gray_bg_gray"
        android:hint="@string/input_email_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_password_instructions" />

    <Button
        android:id="@+id/bt_login"
        style="@style/text_16_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_corner_blue_bg_blue"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@+id/et_log_in_password" />

</android.support.constraint.ConstraintLayout>