<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="62dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_app_name"
        style="@style/text_18_E0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/login_name"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_login_logo" />

    <TextView
        android:id="@+id/tv_login_app_content"
        style="@style/text_14_A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/login_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_app_name" />

    <LinearLayout
        android:id="@+id/ll_login_way"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="90dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_app_content">

        <LinearLayout
            android:id="@+id/ll_steam_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/layout_corner_gray_bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/steam_logo"
                android:clickable="false" />

            <TextView
                style="@style/text_14_FF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:clickable="false"
                android:text="@string/steam" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_facebook_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_corner_gray_bg_white"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/facebook_logo"
                android:clickable="false" />

            <TextView
                style="@style/text_14_FF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:clickable="false"
                android:text="@string/facebook" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_email"
        style="@style/text_14_FF_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/layout_corner_blue_bg_blue"
        android:text="@string/login_in_with_email"
        app:layout_constraintTop_toBottomOf="@+id/ll_login_way" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_email">

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="4"
            android:background="#F0F0F0" />

        <TextView
            style="@style/text_14_61_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:gravity="center"
            android:text="@string/or" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="40dp"
            android:layout_weight="4"
            android:background="#F0F0F0" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_sign_up_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="15dp"
        android:text="@string/sign_up_with_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_login_email" />


</android.support.constraint.ConstraintLayout>