<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:clickable="true"
              android:fadingEdge="horizontal"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        android:fadingEdge="horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="97dp"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/positiveButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/take_picture"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="0.25dp"
                android:background="@color/view_line"/>

            <TextView
                android:id="@+id/neutralButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:text="@string/photo_album"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/negativeButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>