<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <include
        android:id="@+id/sign_up_password_title"
        layout="@layout/title_bar" />

    <TextView
        android:id="@+id/tv_sign_up_set_old_password_instructions"
        style="@style/text_16_DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/old_password"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_password_title" />

    <EditText
        android:id="@+id/et_sign_up_old_password"
        style="@style/text_14_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_corner_edit_gray_bg_gray"
        android:hint="@string/input_email_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColorHint="@color/text_61_color_00"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_set_old_password_instructions" />

    <TextView
        android:id="@+id/tv_sign_up_set_password_instructions"
        style="@style/text_16_DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="24dp"
        android:text="@string/set_your_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_old_password" />

    <EditText
        android:id="@+id/et_sign_up_one_password"
        style="@style/text_14_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_corner_edit_gray_bg_gray"
        android:hint="@string/input_email_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:textColorHint="@color/text_61_color_00"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_set_password_instructions" />

    <TextView
        android:id="@+id/tv_sign_up_set_two_password_instructions"
        style="@style/text_16_DE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_your_password_again"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_one_password" />

    <EditText
        android:id="@+id/et_sign_up_two_password"
        style="@style/text_14_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/layout_corner_edit_gray_bg_gray"
        android:hint="@string/input_email_password"
        android:inputType="textPassword"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_set_two_password_instructions" />

    <Button
        android:id="@+id/bt_sign_up_password_next"
        style="@style/text_16_FF"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_corner_blue_bg_blue"
        android:text="@string/next"
        app:layout_constraintTop_toBottomOf="@+id/et_sign_up_two_password" />

</android.support.constraint.ConstraintLayout>