<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <include
        android:id="@+id/title_bar_setting"
        layout="@layout/title_bar" />

    <LinearLayout
        android:id="@+id/ll_setting_avatar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/title_bar_setting">

        <TextView
            style="@style/text_16_DE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_setting_modify_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/right" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_avatar_password_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        app:layout_constraintTop_toBottomOf="@+id/ll_setting_avatar" />

    <LinearLayout
        android:id="@+id/ll_setting_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="1dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/view_avatar_password_line">

        <TextView
            style="@style/text_16_DE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right|center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/right" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_password_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F0F0F0"
        app:layout_constraintTop_toBottomOf="@+id/ll_setting_password" />

    <Button
        android:id="@+id/bt_logout"
        style="@style/text_16_FF"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/layout_corner_blue_bg_blue"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@+id/view_password_line" />

</android.support.constraint.ConstraintLayout>